--- a/LiteSocks/LiteSocks.csproj
+++ b/LiteSocks/LiteSocks.csproj
@@ -13,5 +13,11 @@
     <PackageReference Include="Serilog.Sinks.Literate" Version="3.0.0" />
     <PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="README.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+  </ItemGroup>
   
 </Project>
